# codex-hud

./: .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
node-tests/: ci-workflow-contract.test.mjs  codex-release-detect.test.mjs  license-contract.test.mjs  managed-path.test.mjs  managed-runtime-is-main-guards.test.mjs  managed-runtime-launch.test.mjs  npm-pack-runtime.test.mjs  npm-packlist.test.mjs  package-json.test.mjs  postinstall-fallbacks.test.mjs  postinstall-runtime.test.mjs  readme-contract.test.mjs  (+1 more)
rust/crates/codex_hud_ops/: Cargo.toml
rust/crates/codex_hud_ops/src/: codex_probe.rs  compat_refresh.rs  compatibility.rs  install_message.rs  integration_flow.rs  lib.rs  manifest_signing.rs  native_install.rs  native_patch.rs  paths.rs  preflight.rs  release_gate.rs  shell_rc.rs  shim.rs  status.rs  statusline_migration.rs  support_gate.rs  uninstall.rs  unsupported_notice.rs
rust/crates/codex_hud_ops/tests/: codex_probe.rs  compat_refresh.rs  compatibility.rs  install_next_steps.rs  integration_flow.rs  manifest_signature.rs  native_install.rs  native_patch.rs  path_matrix.rs  preflight.rs  rc_block.rs  release_gate.rs  release_gate_policy_file.rs  shim_install.rs  status_details.rs  status_redaction.rs  status_summary.rs  statusline_migration.rs  support_gate.rs  uninstall_behavior.rs  uninstall_idempotent.rs  uninstall_mode.rs  uninstall_patch_state.rs  uninstall_rc_cleanup.rs  unsupported_notice.rs
(+115 files in other folders)
