[package]
name = "codex_hud_ops"
version = "0.1.0"
edition = "2021"

[dependencies]
codex_hud_statusline = { path = "../codex_hud_statusline" }
ed25519-dalek = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
